--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,16 @@ Anteriores/Municipios1607.html
 Casosdiarios-Momolap.csv
 Casosdiarios-Momolap.csv
 Casosdiarios-Momolap.csv
+Municipios-3.html
+Municipios.Rmd
+Municipios-2_files/figure-html/unnamed-chunk-38-1.png
+Municipios-2_files/figure-html/unnamed-chunk-38-1.mb.png
+Municipios-2_files/figure-html/unnamed-chunk-32-1.png
+Municipios-2_files/figure-html/unnamed-chunk-32-1.mb.png
+Municipios-2_files/figure-html/unnamed-chunk-26-1.png
+Municipios-2_files/figure-html/unnamed-chunk-26-1.mb.png
+Municipios-2.Rmd
+Municipios-2.html
+Municipios 3.Rmd
+Municipios 2.Rmd
+Casosdiarios-Momolap.csv
