--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,74 @@ Municipios-2.html
 Municipios 3.Rmd
 Municipios 2.Rmd
 Casosdiarios-Momolap.csv
+Anteriores/Municipios2007.Rmd
+.Rproj.user/shared/notebooks/paths
+.Rproj.user/shared/notebooks/patch-chunk-names
+Anteriores/Municipios2007.html
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/lib/girafe-binding-0.7.8/girafe.js
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/lib/htmlwidgets-1.5.1/htmlwidgets.js
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/lib/ggiraphjs-0.3.0/ggiraphjs.min.js
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/lib/ggiraphjs-0.3.0/ggiraphjs.min.css
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/lib/d3-lasso-0.0.5/lasso.js
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/lib/d3-lasso-0.0.5/d3-lasso.min.js
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/cwkv3zwm57pon/000007.metadata
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/cwkv3zwm57pon/000006.csv
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/culgmt0mtu2gv/00000b.json
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/culgmt0mtu2gv/00000a.csv
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/culgmt0mtu2gv/00000b.html
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/culgmt0mtu2gv/00000b.metadata
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/cv9qu5k3m8iz4/000002.csv
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/cwkv3zwm57pon/000007.html
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/cwkv3zwm57pon/000007.json
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/cxvsdd1zlcczm/000004.csv
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/lib/d3-5.7.0/d3.min.js
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/czvg8woq7lm90/000002.csv
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/csetup_chunk/000002.csv
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/coaqnyji7ybsh/000002.csv
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/cif09ex4kj7jq/00000e.csv
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/c5rtn9y6vzmug/000002.csv
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/c9k6k6dqx1zf1/000002.csv
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/chunks.json
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/clyletoadmey2/000002.csv
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/cd5d745sfen4s/000002.csv
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/ccgd8opm9udn3/00000e.png
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/cc2oa5zq8wf12/000004.csv
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/c7d9l2tgithjc/000002.csv
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/c5toinjlq8alz/000002.csv
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/ccgd8opm9udn3/00000d.csv
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/ccgd8opm9udn3/00000e.metadata
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/ccgd8opm9udn3/00000e.snapshot
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/c4260av0bzyuk/000006.csv
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/c2pig1huev5w5/000009.snapshot
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/c2pig1huev5w5/000009.metadata
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/c2pig1huev5w5/000009.png
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/c2pig1huev5w5/000008.csv
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/12F7B6FF4787CC26/chunks.json
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/cy4t2d8qbg4aj/000002.csv
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/c1wojcws156nr/000002.csv
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/csetup_chunk/000002.csv
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/cs68wuzfstbnq/000003.snapshot
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/cs68wuzfstbnq/000003.png
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/cs68wuzfstbnq/000003.metadata
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/cs68wuzfstbnq/000002.csv
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/cbodvsd0yhd9o/000002.csv
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/c3ej73cvmd662/000002.csv
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/12F7B6FF4787CC26/cw65aiz3yg81y/000002.csv
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/12F7B6FF4787CC26/ctc98j1c8gvak/000002.csv
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/12F7B6FF4787CC26/cq6dlv08c4kec/000002.csv
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/12F7B6FF4787CC26/chunks.json
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/12F7B6FF4787CC26/cfa6yjf7obbhh/000002.csv
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/12F7B6FF4787CC26/cch9da7pv1ywk/000002.csv
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/12F7B6FF4787CC26/c8ct451e1ttjs/000002.csv
+.Rproj.user/12F7B6FF/sources/s-4787CC26/lock_file
+.Rproj.user/12F7B6FF/sources/s-4787CC26/DE500240-contents
+.Rproj.user/12F7B6FF/sources/s-4787CC26/E614F35D-contents
+.Rproj.user/12F7B6FF/sources/s-4787CC26/DE500240
+.Rproj.user/12F7B6FF/sources/s-4787CC26/C70C5D91-contents
+.Rproj.user/12F7B6FF/sources/s-4787CC26/C70C5D91
+.Rproj.user/12F7B6FF/sources/s-4787CC26/4A70501F-contents
+.Rproj.user/12F7B6FF/sources/s-4787CC26/4A70501F
+.Rproj.user/12F7B6FF/sources/prop/INDEX
+.Rproj.user/12F7B6FF/sources/prop/DF3547B4
+.Rproj.user/12F7B6FF/sources/prop/68943874
+.Rproj.user/12F7B6FF/sources/prop/56E432A6
