--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,48 @@ Anteriores/Municipios2007.html
 .Rproj.user/12F7B6FF/sources/prop/DF3547B4
 .Rproj.user/12F7B6FF/sources/prop/68943874
 .Rproj.user/12F7B6FF/sources/prop/56E432A6
+.Rproj.user/12F7B6FF/pcs/files-pane.pper
+.Rproj.user/12F7B6FF/pcs/source-pane.pper
+.Rproj.user/12F7B6FF/pcs/windowlayoutstate.pper
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/12F7B6FF214C20A3/chunks.json
+.Rproj.user/12F7B6FF/sources/per/t/DE500240-contents
+.Rproj.user/12F7B6FF/rmd-outputs
+.Rproj.user/12F7B6FF/pcs/workbench-pane.pper
+.Rproj.user/12F7B6FF/saved_source_markers
+.Rproj.user/12F7B6FF/sources/per/t/4A70501F-contents
+.Rproj.user/12F7B6FF/sources/per/t/4A70501F
+.Rproj.user/12F7B6FF/sources/per/t/DE500240
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/12F7B6FF75EF8905/chunks.json
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/c8ct451e1ttjs/000002.csv
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/cfa6yjf7obbhh/000002.csv
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/cch9da7pv1ywk/000002.csv
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/chunks.json
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/cokuyo9t5bvqw/000017.metadata
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/cokuyo9t5bvqw/000017.snapshot
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/cokuyo9t5bvqw/temp/000017.png
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/cq6dlv08c4kec/000002.csv
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/ctc98j1c8gvak/000002.csv
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/cokuyo9t5bvqw/000017.png
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/cj8uqr36of2o6/000002.csv
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/ctwm2k77yga7o/000011.csv
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/ctwm2k77yga7o/000012.html
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/ctwm2k77yga7o/000012.json
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/ctwm2k77yga7o/000012.metadata
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/cw65aiz3yg81y/000002.csv
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/lib/crosstalk-1.1.0.1/css/crosstalk.css
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/lib/crosstalk-1.1.0.1/js/crosstalk.js
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/lib/crosstalk-1.1.0.1/js/crosstalk.js.map
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/lib/crosstalk-1.1.0.1/js/crosstalk.min.js
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/lib/htmlwidgets-1.5.1/htmlwidgets.js
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/lib/crosstalk-1.1.0.1/js/crosstalk.min.js.map
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/lib/jquery-1.11.3/jquery-AUTHORS.txt
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/lib/jquery-1.11.3/jquery.js
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/lib/jquery-1.11.3/jquery.min.js
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/lib/jquery-1.11.3/jquery.min.map
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/lib/plotly-binding-4.9.2.1/plotly.js
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/lib/plotly-htmlwidgets-css-1.52.2/plotly-htmlwidgets.css
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/lib/plotly-main-1.52.2/plotly-latest.min.js
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/lib/typedarray-0.1/typedarray.min.js
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/12F7B6FF1B8F90E9/chunks.json
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/12F7B6FF214C20A3/chunks.json
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/12F7B6FF75EF8905/chunks.json
