--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,19 @@ Anteriores/Municipios2007.html
 .Rproj.user/shared/notebooks/5AAFED78-Municipios/1/12F7B6FF1B8F90E9/chunks.json
 .Rproj.user/shared/notebooks/5AAFED78-Municipios/1/12F7B6FF214C20A3/chunks.json
 .Rproj.user/shared/notebooks/5AAFED78-Municipios/1/12F7B6FF75EF8905/chunks.json
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/12F7B6FF88E32E6F/chunks.json
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/c3qhto2d3g7op/000004.csv
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/c3qhto2d3g7op/000005.html
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/c3qhto2d3g7op/000005.json
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/c3qhto2d3g7op/000005.metadata
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/chor25bl3jtp3/000004.csv
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/chor25bl3jtp3/000005.html
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/chor25bl3jtp3/000005.json
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/chor25bl3jtp3/000005.metadata
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/co3d1ujzqe8wh/000002.csv
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/co3d1ujzqe8wh/000003.html
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/co3d1ujzqe8wh/000003.json
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/co3d1ujzqe8wh/000003.metadata
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/ctwm2k77yga7o/000013.csv
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/ctwm2k77yga7o/000014.error
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/12F7B6FF88E32E6F/chunks.json
