--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,73 @@ Anteriores/Municipios2007.html
 .Rproj.user/shared/notebooks/13408F61-mapamov/1/s/ctwm2k77yga7o/000013.csv
 .Rproj.user/shared/notebooks/13408F61-mapamov/1/s/ctwm2k77yga7o/000014.error
 .Rproj.user/shared/notebooks/5AAFED78-Municipios/1/12F7B6FF88E32E6F/chunks.json
+.Rproj.user/shared/notebooks/8FD88AFD-Prueba/1/s/lib/typedarray-0.1/typedarray.min.js
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/12F7B6FF30154A70/chunks.json
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/12F7B6FF4F992CDA/chunks.json
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/cj8uqr36of2o6/000008.csv
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/cnf6iuwr383p0/000018.csv
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/cnf6iuwr383p0/000019.html
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/cokuyo9t5bvqw/000042.csv
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/cnf6iuwr383p0/000019.metadata
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/cnf6iuwr383p0/000019.json
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/cokuyo9t5bvqw/000043.metadata
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/cokuyo9t5bvqw/000043.png
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/cokuyo9t5bvqw/000043.snapshot
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/cokuyo9t5bvqw/temp/000043.png
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/cuaxaeenfur01/000004.csv
+.Rproj.user/shared/notebooks/13408F61-mapamov/1/s/cuaxaeenfur01/000005.error
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/12F7B6FF30154A70/chunks.json
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/12F7B6FF5AFD5700/chunks.json
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/12F7B6FF4F992CDA/chunks.json
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/12F7B6FF75E99174/chunks.json
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/lib/crosstalk-1.1.0.1/css/crosstalk.css
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/lib/crosstalk-1.1.0.1/js/crosstalk.js
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/lib/crosstalk-1.1.0.1/js/crosstalk.js.map
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/lib/crosstalk-1.1.0.1/js/crosstalk.min.js.map
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/lib/crosstalk-1.1.0.1/js/crosstalk.min.js
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/lib/jquery-1.11.3/jquery-AUTHORS.txt
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/lib/jquery-1.11.3/jquery.min.js
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/lib/jquery-1.11.3/jquery.js
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/lib/jquery-1.11.3/jquery.min.map
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/lib/plotly-htmlwidgets-css-1.52.2/plotly-htmlwidgets.css
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/lib/plotly-binding-4.9.2.1/plotly.js
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/lib/plotly-main-1.52.2/plotly-latest.min.js
+.Rproj.user/shared/notebooks/5AAFED78-Municipios/1/s/lib/typedarray-0.1/typedarray.min.js
+.Rproj.user/shared/notebooks/8FD88AFD-Prueba/1/12F7B6FF4F992CDA/chunks.json
+.Rproj.user/shared/notebooks/8FD88AFD-Prueba/1/s/c5rtn9y6vzmug/000002.csv
+.Rproj.user/shared/notebooks/8FD88AFD-Prueba/1/s/c7d9l2tgithjc/000002.csv
+.Rproj.user/shared/notebooks/8FD88AFD-Prueba/1/s/c9k6k6dqx1zf1/000002.csv
+.Rproj.user/shared/notebooks/8FD88AFD-Prueba/1/s/cd5d745sfen4s/000002.csv
+.Rproj.user/shared/notebooks/8FD88AFD-Prueba/1/s/chunks.json
+.Rproj.user/shared/notebooks/8FD88AFD-Prueba/1/s/cv9qu5k3m8iz4/000002.csv
+.Rproj.user/shared/notebooks/8FD88AFD-Prueba/1/s/csetup_chunk/000002.csv
+.Rproj.user/shared/notebooks/8FD88AFD-Prueba/1/s/lib/crosstalk-1.1.0.1/css/crosstalk.css
+.Rproj.user/shared/notebooks/8FD88AFD-Prueba/1/s/lib/crosstalk-1.1.0.1/js/crosstalk.js
+.Rproj.user/shared/notebooks/8FD88AFD-Prueba/1/s/lib/crosstalk-1.1.0.1/js/crosstalk.js.map
+.Rproj.user/shared/notebooks/8FD88AFD-Prueba/1/s/lib/crosstalk-1.1.0.1/js/crosstalk.min.js
+.Rproj.user/shared/notebooks/8FD88AFD-Prueba/1/s/lib/crosstalk-1.1.0.1/js/crosstalk.min.js.map
+.Rproj.user/shared/notebooks/8FD88AFD-Prueba/1/s/lib/d3-5.7.0/d3.min.js
+.Rproj.user/shared/notebooks/8FD88AFD-Prueba/1/s/lib/d3-lasso-0.0.5/d3-lasso.min.js
+.Rproj.user/shared/notebooks/8FD88AFD-Prueba/1/s/lib/d3-lasso-0.0.5/lasso.js
+.Rproj.user/shared/notebooks/8FD88AFD-Prueba/1/s/lib/ggiraphjs-0.3.0/ggiraphjs.min.css
+.Rproj.user/shared/notebooks/8FD88AFD-Prueba/1/s/lib/ggiraphjs-0.3.0/ggiraphjs.min.js
+.Rproj.user/shared/notebooks/8FD88AFD-Prueba/1/s/lib/girafe-binding-0.7.8/girafe.js
+.Rproj.user/shared/notebooks/8FD88AFD-Prueba/1/s/lib/htmlwidgets-1.5.1/htmlwidgets.js
+.Rproj.user/shared/notebooks/8FD88AFD-Prueba/1/s/lib/jquery-1.11.3/jquery-AUTHORS.txt
+.Rproj.user/shared/notebooks/8FD88AFD-Prueba/1/s/lib/jquery-1.11.3/jquery.js
+.Rproj.user/shared/notebooks/8FD88AFD-Prueba/1/s/lib/jquery-1.11.3/jquery.min.js
+.Rproj.user/shared/notebooks/8FD88AFD-Prueba/1/s/lib/jquery-1.11.3/jquery.min.map
+.Rproj.user/shared/notebooks/8FD88AFD-Prueba/1/s/lib/plotly-binding-4.9.2.1/plotly.js
+.Rproj.user/shared/notebooks/8FD88AFD-Prueba/1/s/lib/plotly-htmlwidgets-css-1.52.2/plotly-htmlwidgets.css
+.Rproj.user/shared/notebooks/8FD88AFD-Prueba/1/s/lib/plotly-main-1.52.2/plotly-latest.min.js
+Anteriores/27072020.html
+.Rproj.user/12F7B6FF/viewer-cache/CE1C82B4.Rdata
+.Rproj.user/12F7B6FF/sources/prop/30DE130B
+.Rproj.user/12F7B6FF/sources/prop/3E82C777
+.Rproj.user/12F7B6FF/viewer-cache/A8E94F74.Rdata
+.Rproj.user/12F7B6FF/sources/per/t/CDC137E0-contents
+.Rproj.user/12F7B6FF/sources/per/t/8AD078B9-contents
+.Rproj.user/12F7B6FF/sources/per/t/8AD078B9
+.Rproj.user/12F7B6FF/sources/per/t/3EC31B5D-contents
+.Rproj.user/12F7B6FF/sources/per/t/3EC31B5D
+.Rproj.user/12F7B6FF/sources/per/t/CDC137E0
