--- a/.gitignore
+++ b/.gitignore
@@ -230,3 +230,4 @@ Anteriores/27072020.html
 .Rproj.user/12F7B6FF/sources/per/t/3EC31B5D-contents
 .Rproj.user/12F7B6FF/sources/per/t/3EC31B5D
 .Rproj.user/12F7B6FF/sources/per/t/CDC137E0
+.Rproj.user
