--- a/.gitignore
+++ b/.gitignore
@@ -231,3 +231,11 @@ Anteriores/27072020.html
 .Rproj.user/12F7B6FF/sources/per/t/3EC31B5D
 .Rproj.user/12F7B6FF/sources/per/t/CDC137E0
 .Rproj.user
+Incidencia-Semanal.Rmd
+Incidencia Semanal.Rmd
+Gráficos/wesanderson/Centro Norte.png
+Gráficos/wesanderson/Noroeste.png
+Gráficos/wesanderson/Río Sonora.png
+Gráficos/wesanderson/Sierra Alta.png
+Gráficos/wesanderson/Sierra Centro.png
+Gráficos/wesanderson/Sur.png
